...
            "state" : "translated",
            "value" : "Безопасность и поддержка"
          }
        }
      }
    },
    "Боб Тестов" : {
      "extractionState" : "manual",
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Боб Тестов"
...
            "state" : "translated",
            "value" : "Вызывает виброотклик и звуковой сигнал на устройстве коллеги"
          }
        }
      }
    },
    "Выйти" : {
      "extractionState" : "manual",
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Выйти"
...
            "state" : "translated",
            "value" : "Загрузка…"
          }
        }
      }
    },
    "Закрыть" : {
      "extractionState" : "manual",
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Закрыть"
...
            "state" : "translated",
            "value" : "Объявлений пока нет"
          }
        }
      }
    },
    "Объявления" : {
      "extractionState" : "manual",
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Объявления"
...
            "state" : "translated",
            "value" : "Отправила правки."
          }
        }
      }
    },
    "Отправить" : {
      "extractionState" : "manual",
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Отправить"
...
            "state" : "translated",
            "value" : "Прокрутить к последнему сообщению"
          }
        }
      }
    },
    "Профиль" : {
      "extractionState" : "manual",
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Профиль"
...
